Add header section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
         <title>Landing Page</title>
     </head>
     <body>
-
+        <div class="header">
+            <div class="header">
+                <a>Header Logo</a>
+                <a href="">Header link one</a>
+                <a href="">Header link two</a>
+            </div>
+            <div class="header">
+                <div>
+                    <h1>This website is awesome</h1>
+                    <h6>This website have some subtext that goes here under the main title. It's smaller font and the color is lowedr contrast</h6>
+                    <button>Sign Up</button>
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
     </body>
 </body>
