--- a/index.html
+++ b/index.html
@@ -1,25 +1,75 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Landing Page</title>
     </head>
     <body>
-        <div class="header">
-            <div class="header">
-                <a>Header Logo</a>
-                <a href="">Header link one</a>
-                <a href="">Header link two</a>
-            </div>
-            <div class="header">
-                <div>
-                    <h1>This website is awesome</h1>
-                    <h6>This website have some subtext that goes here under the main title. It's smaller font and the color is lowedr contrast</h6>
-                    <button>Sign Up</button>
+        <div class="uno">
+            <div class="izquierda">
+                <div class="arriba">
+                    <a href="#" class="logo link">Header Logo</a>
                 </div>
-                <div>
-                    <img src="" alt="">
+                <div class="abajo">
+                    <p class="titulo">This website is awesome</p>
+                    <p class="subtitulo">This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</p>
+                    <a href="#" class="boton link">Sign Up</a>
+                    
+                </div>
+            </div>
+            <div class="derecha">
+                <div class="arriba">
+                    <a href="#" class="link">header link one</a>
+                    <a href="#" class="link">header link two</a>
+                    <a href="#" class="link">header link three</a>
+                </div>
+                <div class="abajo">
+                    <p class="img">This is a placeholder for an image</p>
                 </div>
             </div>
         </div>
+        <div class="dos">
+            <div class="arriba">
+                <h1>Some random information.</h1>
+            </div>
+            <div class="abajo">
+                <div class="adentro">
+                    <img class="img" src="" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="adentro">
+                    <img class="img" src="" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="adentro">
+                    <img class="img" src="" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="adentro">
+                    <img class="img" src="" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+        <div class="tres">
+            <div class="adentro">
+                <p class="arriba">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="abajo">-Thor, God of Thunder</p>
+            </div>
+        </div>
+        <div class="cuatro">
+            <div class="adentro">
+                <div class="izquierda">
+                    <h1>Call to action! It's time!</h1>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="derecha">
+                    <a class="btn link" href="#">Sign up</a>
+                </div>
+            </div>
+        </div>
+        <div class="cinco">
+            <p>Copyright &#169; The Odin Project 2021</p>
+        </div>
     </body>
-</body>
+</html>
