added text and images of Asuncion

--- a/index.html
+++ b/index.html
@@ -2,52 +2,57 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <title>Landing Page</title>
+        <title>Asuncion</title>
     </head>
     <body>
         <div class="uno">
             <div class="izquierda">
                 <div class="arriba">
-                    <a href="#" class="logo link">Header Logo</a>
+                    <a href="#" class="logo link">Inicio</a>
                 </div>
                 <div class="abajo">
-                    <p class="titulo">This website is awesome</p>
-                    <p class="subtitulo">This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</p>
-                    <a href="#" class="boton link">Sign Up</a>
+                    <p class="titulo">¡Madre de Ciudades!</p>
+                    <p class="subtitulo">
+                        La capital de Paraguay fue fundada en 1537 por españoles 
+                        y desde allí partieron varias expediciones que crearon decenas de ciudades,
+                        entre las cuales está Santa Cruz de la Sierra, en Bolivia, 
+                        y la refundación de Buenos Aires.
+                    </p>
+                    <a href="#" class="boton link">Conocer mas</a>
                     
                 </div>
             </div>
             <div class="derecha">
                 <div class="arriba">
-                    <a href="#" class="link">header link one</a>
-                    <a href="#" class="link">header link two</a>
-                    <a href="#" class="link">header link three</a>
+                    <a href="#" class="link">Historia</a>
+                    <a href="#" class="link">Turismo</a>
+                    <a href="#" class="link">Contacto</a>
                 </div>
                 <div class="abajo">
-                    <p class="img">This is a placeholder for an image</p>
+                    <img class="img" src="img/portada.jpg">
                 </div>
             </div>
         </div>
         <div class="dos">
             <div class="arriba">
-                <h1>Some random information.</h1>
+                <h1>Lugares de interes.</h1>
             </div>
             <div class="abajo">
                 <div class="adentro">
-                    <img class="img" src="" alt="">
-                    <p>This is some subtext under an illustration or image</p>
+                    <img class="img" src="img/panteon.jpg" alt="Panteon de los Heroes">
+                    <p>Panteon de los Heroes</p>
                 </div>
                 <div class="adentro">
-                    <img class="img" src="" alt="">
-                    <p>This is some subtext under an illustration or image</p>
+                    <img class="img" src="img/independencia.jpg" alt="Casa de la Independencia">
+                    <p>Casa de la Independencia</p>
                 </div>
                 <div class="adentro">
-                    <img class="img" src="" alt="">
-                    <p>This is some subtext under an illustration or image</p>
+                    <img class="img" src="img/costanera.jpg" alt="Costanera de Asuncion">
+                    <p>Costanera de Asuncion</p>
                 </div>
                 <div class="adentro">
-                    <img class="img" src="" alt="">
-                    <p>This is some subtext under an illustration or image</p>
+                    <img class="img" src="img/chacatour.jpeg" alt="ChacaTour">
+                    <p>ChacaTour</p>
                 </div>
             </div>
         </div>
