--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="abajo">
                 <div class="adentro">
-                    <img class="img" src="img/panteon.jpg" alt="Panteon de los Heroes">
+                    <img class="img" src="./img/panteon.jpg" alt="Panteon de los Heroes">
                     <p>Panteon de los Heroes</p>
                 </div>
                 <div class="adentro">
@@ -58,8 +58,12 @@
         </div>
         <div class="tres">
             <div class="adentro">
-                <p class="arriba">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <p class="abajo">-Thor, God of Thunder</p>
+                <p class="arriba">
+                    Una de las maravillas que he conocido, es sin duda Asuncion.
+                    Preciosa ciudad llena de recovecos para caminar y perderse. 
+                    Posee una historia y cultura impresionante y que deja sin habla a los que la visitamos.  
+                </p>
+                <p class="abajo">-Nunca Nadie</p>
             </div>
         </div>
         <div class="cuatro">
