updated text on cuatro

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <div class="cuatro">
             <div class="adentro">
                 <div class="izquierda">
-                    <h1>Call to action! It's time!</h1>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <h1>Recibir novedades...</h1>
+                    <p>Suscribete a nuestro boletin semanal presionando el boton!</p>
                 </div>
                 <div class="derecha">
-                    <a class="btn link" href="#">Sign up</a>
+                    <a class="btn link" href="#">Suscribirse</a>
                 </div>
             </div>
         </div>
