--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="cinco">
-            <p>Copyright &#169; The Odin Project 2021</p>
+            <p>Copyright &#169; Fernando Segovia - 2022</p>
         </div>
     </body>
 </html>
